# nohrs

./: .gitignore  Cargo.toml  LICENSE  README.md  samle.txt
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
docs/: README.ja.md  project.ja.md
src/: lib.rs
src/core/: errors.rs  mod.rs
src/core/telemetry/: logging.rs
src/gui/: main.rs
src/models/: file_entry.rs
src/pages/: explorer.rs  extensions.rs  git.rs  mod.rs  s3.rs  search.rs  settings.rs
src/pages/explorer/: entries.rs  mod.rs  search.rs  types.rs
src/pages/explorer/view/: header.rs  mod.rs  sidebar.rs
src/pages/explorer/view/listing/: grid.rs  list.rs  mod.rs  row.rs  search_bar.rs
src/pages/explorer/view/preview/: editor.rs  mod.rs
src/services/: mod.rs  syntax.rs
src/services/fs/: listing.rs
src/services/search/: backend.rs  engine.rs  indexer.rs  mod.rs  ripgrep.rs  watcher.rs
src/ui/: app.rs  assets.rs  mod.rs  theme.rs
src/ui/components/: file_list.rs  mod.rs  pane.rs
src/ui/components/layout/: footer.rs  mod.rs
tests/: indexing_test.rs  watcher_test.rs
