[package]
name = "nohr"
version = "0.1.0"
edition = "2021"

[lib]
name = "nohr"
path = "src/lib.rs"


[features]
default = []
gui = ["dep:gpui", "dep:gpui-component", "dep:rust-embed"]

[[bin]]
name = "nohr"
path = "src/gui/main.rs"
required-features = ["gui"]

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
# Planned (add when implemented): sled = "0.34", sqlite crates, aws-sdk-s3/object_store, gix/git2, comrak, syntect, notify
gpui = { version = "0.2", optional = true }
gpui-component = { version = "0.3", optional = true }
rust-embed = { version = "8", optional = true }
comrak = "0.22"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
notify = "6"
trash = "5"
time = { version = "0.3", features = ["formatting", "macros"] }
tantivy = "0.22"
ignore = "0.4"
grep = "0.3"
dirs = "5.0"
notify-debouncer-mini = "0.4"
[dev-dependencies]
tempfile = "3"
